--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,19 +4,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/hasil"
     android:layout_height="match_parent"
     tools:context=".DashboardActivity">
-
+    
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/login_appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:background="@null"
+        android:layout_height="?attr/actionBarSize"
+        app:elevation="0dp"
         >
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/login_toolbar"
             android:layout_width="match_parent"
-            app:theme="@style/Widget.AppCompat.ActionBar.TabBar"
-            android:layout_height="match_parent">
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:layout_height="wrap_content">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -26,175 +29,213 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Menu"
-                    android:textColor="#000"
+                    android:textColor="#fff"
                     android:fontFamily="@font/sfbold"
                     android:textSize="20dp"/>
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <RelativeLayout
-        android:background="#F2F5F7"
+    <ScrollView
+        android:layout_below="@id/login_appbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/login_appbar">
+        android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/dashboard_status"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="20dp"
-            android:background="#fff"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Status Bengkel"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="30dp"
-                android:fontFamily="@font/sf"
-                android:textSize="16dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:fontFamily="@font/sfbold"
-                android:text="Aktif"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="30dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_marginHorizontal="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/dashboard_status">
+            android:layout_below="@id/login_appbar">
 
-            <LinearLayout
-                android:id="@+id/dashboard_linear_atas"
+            <RelativeLayout
+                android:id="@+id/dashboard_atas"
+                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/dashboard_cv_daftarservice"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="10dp"
-                    app:cardElevation="10dp"
-                    android:layout_gravity="center">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-                        <ImageView
-                            android:layout_width="120dp"
-                            android:layout_height="120dp"
-                            android:src="@drawable/daftar_service"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Daftar Service"
-                            android:fontFamily="@font/sfbold"
-                            android:layout_marginTop="20dp"/>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dashboard_nama"
+                    android:text="Bengkel Cecep"
+                    android:fontFamily="@font/sfbold"
+                    android:textSize="32dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:textColor="#fff"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Selamat datang di Otopreneur"
+                    android:layout_below="@id/dashboard_nama"
+                    android:layout_marginHorizontal="20dp"
+                    android:fontFamily="@font/sf"
+                    android:textSize="22dp"
+                    android:textColor="#fff"/>
+            </RelativeLayout>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/dashboard_cv_order"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    app:cardElevation="10dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-                        <ImageView
-                            android:layout_width="120dp"
-                            android:layout_height="120dp"
-                            android:src="@drawable/order"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Order"
-                            android:fontFamily="@font/sfbold"
-                            android:layout_marginTop="20dp"/>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_below="@id/dashboard_linear_atas"
+            <RelativeLayout
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/dashboard_atas"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/dashboard_cv_history"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    android:layout_margin="10dp"
-                    app:cardElevation="10dp"
-                    android:layout_gravity="center">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-                        <ImageView
-                            android:layout_width="120dp"
-                            android:layout_height="120dp"
-                            android:src="@drawable/history"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="History Order"
-                            android:fontFamily="@font/sfbold"
-                            android:layout_marginTop="20dp"/>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:id="@+id/dashboard_status"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:background="#fff"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp">
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/dashboard_cv_settings"
-                    android:layout_width="160dp"
-                    android:layout_height="190dp"
-                    app:cardElevation="10dp"
-                    android:layout_margin="10dp"
-                    android:layout_gravity="center">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Status Bengkel"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="30dp"
+                        android:fontFamily="@font/sf"
+                        android:textSize="16dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:fontFamily="@font/sfbold"
+                        android:text="Aktif"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="30dp"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dashboard_status">
+
                     <LinearLayout
+                        android:id="@+id/dashboard_linear_atas"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clipToPadding="false"
                         android:gravity="center"
-                        android:orientation="vertical">
-                        <ImageView
-                            android:layout_width="120dp"
-                            android:layout_height="120dp"
-                            android:src="@drawable/setting"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Settings"
-                            android:fontFamily="@font/sfbold"
-                            android:layout_marginTop="20dp"/>
+                        android:orientation="horizontal">
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/dashboard_cv_daftarservice"
+                            android:layout_width="160dp"
+                            android:layout_height="190dp"
+                            android:layout_margin="10dp"
+                            app:cardElevation="10dp"
+                            android:layout_gravity="center">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:src="@drawable/daftar_service"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Daftar Service"
+                                    android:fontFamily="@font/sfbold"
+                                    android:layout_marginTop="20dp"/>
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/dashboard_cv_order"
+                            android:layout_width="160dp"
+                            android:layout_height="190dp"
+                            app:cardElevation="10dp"
+                            android:layout_margin="10dp"
+                            android:layout_gravity="center">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:src="@drawable/order"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Order"
+                                    android:fontFamily="@font/sfbold"
+                                    android:layout_marginTop="20dp"/>
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
                     </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_below="@id/dashboard_linear_atas"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/dashboard_cv_history"
+                            android:layout_width="160dp"
+                            android:layout_height="190dp"
+                            android:layout_margin="10dp"
+                            app:cardElevation="10dp"
+                            android:layout_gravity="center">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:src="@drawable/history"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="History Order"
+                                    android:fontFamily="@font/sfbold"
+                                    android:layout_marginTop="20dp"/>
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/dashboard_cv_settings"
+                            android:layout_width="160dp"
+                            android:layout_height="190dp"
+                            app:cardElevation="10dp"
+                            android:layout_margin="10dp"
+                            android:layout_gravity="center">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:src="@drawable/setting"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Settings"
+                                    android:fontFamily="@font/sfbold"
+                                    android:layout_marginTop="20dp"/>
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
-    </RelativeLayout>
 
+    </ScrollView>
 
 </RelativeLayout>
