--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -16,19 +16,15 @@
             android:layout_width="match_parent"
             app:theme="@style/Widget.AppCompat.ActionBar.TabBar"
             android:layout_height="match_parent">
-            <RelativeLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/detailorder_judul"
-                    android:layout_centerInParent="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Detail Order"
-                    android:textColor="#000"
-                    android:fontFamily="@font/sfbold"
-                    android:textSize="20dp"/>
-            </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:id="@+id/detailorder_judul"
+                android:text="Detail Order"
+                android:textSize="18dp"
+                android:fontFamily="@font/sfbold"
+                android:gravity="center"
+                android:layout_marginRight="?android:attr/actionBarSize"/>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
