--- a/app/src/main/res/layout/activity_history_order.xml
+++ b/app/src/main/res/layout/activity_history_order.xml
@@ -5,30 +5,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/utama"
     tools:context=".Dashboard.HistoryOrderActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/history_appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:background="@null"
+        android:layout_height="?attr/actionBarSize"
+        app:elevation="0dp">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/history_toolbar"
             android:layout_width="match_parent"
-            app:theme="@style/Widget.AppCompat.ActionBar.TabBar"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_height="wrap_content">
-            <RelativeLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/history_judul"
-                    android:layout_centerHorizontal="true"
-                    android:text="History Order"
-                    android:textSize="18dp"
-                    android:textColor="#282F39"
-                    android:fontFamily="@font/sfbold"/>
-            </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:id="@+id/history_judul"
+                android:text="History Order"
+                android:textSize="18dp"
+                android:fontFamily="@font/sfbold"
+                android:textColor="#fff"
+                android:gravity="center"
+                android:layout_marginRight="?android:attr/actionBarSize"/>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
