--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,18 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/utama"
     tools:context=".Dashboard.SettingsActivity">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/settings_toolbar"
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/settings_appbar"
         android:layout_width="match_parent"
-        android:background="#282F39"
-        android:layout_height="wrap_content"/>
+        android:background="@null"
+        android:layout_height="?attr/actionBarSize"
+        app:elevation="0dp">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/settings_toolbar"
+            android:layout_width="match_parent"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <RelativeLayout
         android:id="@+id/settings_atas"
-        android:layout_below="@id/settings_toolbar"
+        android:layout_below="@id/settings_appbar"
         android:layout_width="match_parent"
-        android:background="#282F39"
         android:layout_height="200dp">
 
         <RelativeLayout
@@ -56,12 +65,13 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_marginTop="20dp"
+
         android:layout_below="@id/settings_tengah"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#fff">
         <RelativeLayout
+            android:layout_marginVertical="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp">
