--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -94,12 +94,13 @@
                         android:fontFamily="@font/sf"
                         android:textSize="16dp"/>
 
-                    <TextView
+                    <Switch
+                        android:id="@+id/dashboard_aktif"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="20dp"
-                        android:fontFamily="@font/sfbold"
-                        android:text="Aktif"
+                        android:checked="false"
+                        android:textOff="Off"
+                        android:textOn="On"
                         android:layout_centerVertical="true"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="30dp"/>
