--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     tools:context=".LoginActivity">
 
     <ImageView
+        android:id="@+id/login_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -15,15 +16,39 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/sfbold"
         android:textSize="22dp"/>
+    
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/login_logo"
+        android:src="@drawable/powered"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"/>
 
-    <Button
-        android:layout_marginHorizontal="30dp"
-        android:id="@+id/login_button"
-        android:text="Login"
-        android:textColor="#fff"
-        android:background="@drawable/button_hijau"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp">
+        <Button
+            android:layout_marginHorizontal="30dp"
+            android:id="@+id/login_button"
+            android:text="Login"
+            android:textColor="#fff"
+            android:background="@drawable/button_hijau"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/login_lupapassword"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#fff"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:fontFamily="@font/sfbold"
+            android:text="Lupa Password"/>
+    </LinearLayout>
 </RelativeLayout>
